# Florida-Schools-Info-2024

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py  wsgi.py
src/census_app/: __init__.py
src/census_app/core/: __init__.py  census_fetcher.py  config.py  formatting.py  geo_data.py  geo_ops.py  http_utils.py  mapbox.py  overture.py
src/census_app/web/: __init__.py  flask_app.py  overture_routes.py  school_data.py
src/census_app/web/static/css/: style.css
src/census_app/web/static/js/: app.js
src/census_app/web/templates/: index.html
