[project]
name = "census-app"
version = "0.1.0"
description = "Geospatial School Data Information App"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "polars",
  "pandas",
  "geopandas",
  "requests",
  "shapely",
  "shiny",
  "shinywidgets",
  "ipyleaflet",
  "ipywidgets",
  "ipydatagrid",
  "pygris",
  "pyarrow",
  "fastparquet",
  "openpyxl",
  "duckdb",
]

[project.scripts]
census-app = "census_app.web.main:app.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/census_app"]

[tool.uv]
# Keep existing virtualenvs instead of recreating them.
python-preference = "only-system"
