[project]
name = "census-app"
version = "0.1.0"
description = "Geospatial School Data Information App"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "geopandas",
  "polars",
  "requests",
  "shapely",
  "flask",
  "python-dotenv",
  "pygris",
  "pyarrow",
  "fastparquet",
  "openpyxl",
  "duckdb",
]

[project.scripts]
census-app = "census_app.web.flask_app:app.run"

[project.optional-dependencies]
census = [
  "pytidycensus",
]
dev = [
  "pytest",
  "hypothesis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/census_app"]

[tool.uv]
# Keep existing virtualenvs instead of recreating them.
python-preference = "only-system"
